<resources>
    <string name="app_name">Dashboard</string>
    <string name="list_of_names">List of Names</string>
    <string name="name">Name:</string>
    <string name="nameOutput">Rubin Shrestha</string>
    <string name="age">Age:</string>
    <string name="ageOutput">23</string>
    <string name="sex">Sex:</string>
    <string name="sexOutput">Male</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txvFree">Free Users</string>
    <string name="txvPremium">Premium Users</string>
</resources>