<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#429e29"
    android:orientation="vertical"
    app:cardCornerRadius="16dp"
    android:elevation="16dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:id="@+id/relNames"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imvProfile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_person_white_24" />

        <TextView
            android:id="@+id/txvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imvProfile"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txvNameOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@string/nameOutput"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txvName"/>

        <TextView
            android:id="@+id/txvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvName"
            android:layout_toEndOf="@id/imvProfile"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txvAgeOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvNameOutput"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txvName"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/ageOutput" />

        <TextView
            android:id="@+id/txvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvAge"
            android:layout_toEndOf="@id/imvProfile"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sex"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txvSexOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvAgeOutput"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txvName"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/sexOutput" />



    </RelativeLayout>



</androidx.cardview.widget.CardView>